# deep-visualizer

./: .coderabbit.yaml  .gitignore  .pre-commit-config.yaml  DEVBOX.md  LICENSE.md  README.md  biome.json  deep-visualizer.code-workspace  devbox.json  orval.config.ts  package.json  pyproject.toml  render.yaml  vite.config.ts
.github/workflows/: api.yaml  front.yaml  root.yaml
api/: .env.example  .env.test.example  .gitignore  .pre-commit-config.yaml  README.md  constants.py  devbox.json  main.py  main_test.py  openapi.json  openapi_test.py  pyproject.toml  pyproject_test.py  settings.py
api/core/: activation_function.py  activation_function_test.py  supported_models.py  supported_models_test.py
api/core/custom_activation_functions/: elish.py  elish_test.py  heavyside_step_function.py  heavyside_step_function_test.py  sinusoid.py  sinusoid_test.py
api/database/: connection.py  models.py  setup.py
api/routers/: access_token.py  access_token_test.py  inference.py
api/routers/core/: activation_function.py  activation_function_test.py
api/scripts/: check_dependencies.py  check_example_env_files_are_in_sync_with_settings.py  check_supported_models_exist.py
api/utils/: env.py  env_test.py  settings.py
api/utils/logging/: json_formatter.py  logger.py
api/utils/logs/: __init__.py  json_formatter.py  json_formatter_test.py  logger.py  setup_logger.py  setup_logger_test.py
api/utils/open_api/: __init__.py  generate_json_file.py  generate_json_file_test.py
api/utils/routers/: router.py  router_test.py
front/: .cta.json  .env.example  .pre-commit-config.yaml  README.md  bun.lockb  devbox.json  package-lock.json  package.json  tailwind.config.ts
front/src/: api.ts  constants.ts  env.ts  global.d.ts  openapi.ts  routeTree.gen.ts  router.tsx  start.ts  styles.css
front/src/components/: Header.tsx  demo.FormComponents.tsx
front/src/components/3d/: 3d-canvas.tsx  chart.tsx  curve.tsx  curved-link.tsx  glowing-ball.tsx  with-glow.tsx  with-pause.tsx  with-rotation.tsx
front/src/components/3d/chart/: axis.tsx  index.tsx  spike-line.tsx  tooltip.tsx
front/src/components/3d/scenes/chart/: axis.tsx  index.tsx
front/src/components/chat/: box.tsx
front/src/components/navigation/: breadcrumbs.tsx  header.tsx  navigation-card.tsx  not-found.tsx
front/src/components/navigation/card/: activation-function.tsx  activation-functions-list.tsx  index.tsx
front/src/components/neural-network/: Neuron.tsx  activation-function-chart.tsx  neural-connection.tsx  neuron.tsx
front/src/components/player/: index.tsx  transcript.tsx
front/src/components/ui/: breadcrumb.tsx  button.tsx  or-separator.tsx  slider.tsx  typography.tsx
front/src/fonts/Tomorrow/: regular.ts
front/src/hooks/: useCurrentMatch.ts  useRoute.ts
front/src/lib/: colors.ts  loader-data.ts
front/src/lib/highlight/: types.ts
front/src/lib/router/: types.ts
front/src/routes/: __root.tsx  activation-function.tsx  activation-functions.tsx  api-proxy.ts  api.mcp-todos.ts  api.ts  demo.form.address.tsx  demo.form.simple.tsx  demo.mcp-todos.tsx  demo.start.api-request.tsx  demo.start.server-funcs.tsx  demo.table.tsx  demo.tanstack-query.tsx  index.tsx  learn.tsx
front/src/routes/-components/: ActivationFunctionCard.tsx
front/src/routes/_components/: ActivationFunctionCard.tsx
front/src/routes/activation-functions/: $activationFunctionId.tsx  index.tsx
front/src/utils/: client-logger.ts  logger.client.ts  logger.server.ts  logger.ts  server-logger.ts
front/src/utils/3d/: project-on-curve.ts
front/src/utils/arrays/: is-non-empty.ts
front/src/utils/logs/: index.ts  logger.client.ts  logger.server.ts
front/src/utils/middlewares/: errorHandlingMiddleware.ts
front/src/utils/refs/: is-non-null-ref.ts  is-not-null-ref.ts
shared/: constants.ts
shared/openapi/: codegen.test.ts
