[project]
name = "deep-visualizer"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = []

[dependency-groups]
dev = [
    "pre-commit~=4.3",
    "pytest~=8.4",
]

[tool.pytest.ini_options]
pythonpath = [
  "."
]
python_classes = ["*Test"]
python_functions = ["should_*"]
python_files = ["*_test.py"]
addopts = ["--cov=.", "--cov-report=xml"]

[build-system]
requires = ["setuptools>=64.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["api", "api.*"]