[project]
name = "deep-visualizer"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]~=0.116",
    "httpx~=0.28",
    "huggingface-hub~=0.34",
    "logtail-python~=0.3",
    "pydantic-settings~=2.10",
    "python-dotenv~=1.1",
    "sentry-sdk[fastapi]~=2.35",
    "torch~=2.8",
    "transformers~=4.56",
]

[dependency-groups]
dev = [
    "mypy~=1.17",
    "openapi-core~=0.19",
    "pre-commit~=4.3",
    "pydantic~=2.11",
    "pytest~=8.4",
    "types-requests~=2.32",
]

[tool.pytest.ini_options]
pythonpath = [
  "."
]
python_classes = ["*Test"]
python_functions = ["should_*"]
python_files = ["*_test.py"]
addopts = ["--cov=.", "--cov-report=xml"]

[build-system]
requires = ["setuptools>=64.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["api", "api.*"]

[tool.mypy]
plugins = ['pydantic.mypy']
files = ["api"]
explicit_package_bases = true
namespace_packages = true

[[tool.mypy.overrides]]
module = "logtail.*"
ignore_missing_imports = true