[project]
name = "api"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi[standard]~=0.116",
    "httpx~=0.28",
    "huggingface-hub~=0.34",
    "logtail-python~=0.3",
    "pydantic-settings~=2.10",
    "python-dotenv~=1.1",
]

[dependency-groups]
dev = [
    "mypy~=1.17",
    "pre-commit~=4.3.0",
    "pytest~=8.4",
    # If you change this, don't forget to change the pre-commit hook as well
    "ruff==0.12.12",
    "types-requests~=2.32",
]

[tool.mypy]
plugins = ['pydantic.mypy']
explicit_package_bases = true
namespace_packages = true

[[tool.mypy.overrides]]
module = "logtail.*"
ignore_missing_imports = true

[tool.ruff]
lint.select = ["E", "F", "I", "TID"]

[tool.pytest.ini_options]
pythonpath = [
  "."
]
python_classes = ["*Test"]
python_functions = ["should_*"]
python_files = ["*_test.py"]
